Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135158

Quick Popup window can no longer have negative x on Wayland

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.4, 6.9.2, 6.10.0 Beta3
    • 6.9.0 Beta3, 6.9.0
    • Quick: Other
    • None
    • 41ded46cb (dev), 55ca0456e (6.9), 9dde3f994 (tqtc/lts-6.8)

      The new independent window quick popup can no longer have negative x with Qt 6.9.0 Beta 3. In this case, I refer to negative x with regard to the quick window.

      A use case for this is using top-level/independent window popup in tool tips, where the coordinates are relative to the parent control.

      This was working fine with Qt 6.8.2.

      I have found this patch: https://github.com/qt/qtdeclarative/commit/7add1868c0956bca769a33d2974b211c6e533567:

      PopupPositioner: ensure popup windows are placed inside a screen
      
      When `popupType: Popup.Item`, the popup positioner will attempt to flip,
      move and resize the popup item, in order to make it fit inside its
      window.
      
      We want something similar for when `popupType: Popup.Window`, except
      that the bounds in this case, ends up being the geometry of the screen
      that contains the popup window, instead of the nearest parent item's
      window.
      
      The omission of any resizing to the popup window, is done on purpose.
      Since the popup positioner's current role, is to only affect the popup
      window position. This might change in the future, in case we decide to
      refactor some of the logic around popup window resizing. 

      Something went wrong with that? I can tell that relative negative coordinates I want to set definitely does not go beyond the screen bounds.

      I have not had chance to test this with Qt 6.8.3 and Qt 6.9.0 yet. If this is already fixed, please feel free to close it.

      hurlevent mitch_curtis

        1. qt1.png
          38 kB
          Fatih Uzunoglu
        2. qt2.png
          47 kB
          Fatih Uzunoglu
        For Gerrit Dashboard: QTBUG-135158
        # Subject Branch Project Status CR V

            hurlevent Oliver Eftevaag
            fuzun Fatih Uzunoglu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes